made button danger

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <th scope="row">1</th>
               <td>Get some Coffee</td>
               <td>You need coffee as you are a coder</td>
-              <td><button class="btn btn-sm btn-primary">Delete</button></td>
+              <td><button class="btn btn-sm btn-danger">Delete</button></td>
             </tr>
           </tbody>
         </table>
