--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
       crossorigin="anonymous"
     />
 
+ 
+
+
     <title>TODOs List</title>
   </head>
   <body>
+     <img src="https://assets.unenvironment.org/styles/article_billboard_image/s3/2021-05/alberta-2297204_1920.jpg?h=1483c54f&amp;itok=GdjA9GRu" alt="Nature" class="center>
     <div class="container my-4">
       <h2 class="text-center">TODOs List</h2>
 
       <div class="form-group">
-        <label for="title">Title</label>
+        <label for="title">Topic</label>
         <input
           type="text"
           class="form-control"
           id="title"
           aria-describedby="emailHelp"
+               
         />
+        <p>My first Todo List</p>
         <small id="emailHelp" class="form-text text-muted"
           >Add an item to the list</small
         >
